Fix post titles in category indexes in dark mode. I think this was only used for the (discontinued) blog but it bothered me so I fixed it

--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -86,6 +86,14 @@ $brand-color-darkmode: lighten($brand-color, 20%);
     color: $grey-color;
   }
 
+  .post-link {
+    color: $text-color-darkmode;
+
+    &:visited {
+      color: $text-color-darkmode;
+    }
+  }
+
   hr {
       border-top: 1px solid $grey-color-light;
   }
